--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "@angular/compiler-cli": "^18.2.0",
     "@biomejs/biome": "1.9.4",
     "@types/jasmine": "~5.1.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.2"
   }
 }
